WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202222
Don't fall back to default session if session can't be found for cookie operations
https://bugs.webkit.org/show_bug.cgi?id=202222
Summary
Don't fall back to default session if session can't be found for cookie opera...
Alex Christensen
Reported
2019-09-25 12:35:25 PDT
Don't fall back to default session if session can't be found for cookie operations
Attachments
Patch
(8.76 KB, patch)
2019-09-25 12:37 PDT
,
Alex Christensen
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-09-25 12:37:31 PDT
Created
attachment 379573
[details]
Patch
Geoffrey Garen
Comment 2
2019-09-25 12:40:43 PDT
Comment on
attachment 379573
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=379573&action=review
r=me
> Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:-505 > - LOG_ERROR("Non-default storage session was requested, but there was no session for it. Please file a bug unless you just disabled private browsing, in which case it's an expected race.");
Should we leave behind this LOG_ERROR? Seems like a real error.
Alex Christensen
Comment 3
2019-09-25 12:43:19 PDT
I left it.
http://trac.webkit.org/r250354
Radar WebKit Bug Importer
Comment 4
2019-09-25 12:44:18 PDT
<
rdar://problem/55714819
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug